# Markup-Based-Segmentation-of-MnA-Agreements

./: README.md  ablation_mask.slurm  constrained_inference.py  hparam_tuning.py  inference.py  input_pipeline.py  model_train.slurm  predict.py  pyproject.toml  requirements.txt  setup.py  train.py  utils.py
configs/: config.yaml  config_ablation_mask.yaml  config_ablation_shuffle.yaml  config_large.yaml  config_training_curves.yaml  config_training_curves10.yaml  config_training_curves100pct.yaml  config_training_curves10pct.yaml  config_training_curves20.yaml  config_training_curves30.yaml  config_training_curves3pct.yaml  config_training_curves40.yaml  config_training_curves50.yaml  config_training_curves50pct.yaml  hparam_config.yaml
markup-mna/slurm_scripts/: ablation_mask.slurm  ablation_shuffle.slurm  inference.slurm  large_model_train.slurm  small_model_train.slurm  training_curves10pct.slurm  training_curves3pct.slurm
slurm_scripts/: ablation_mask.slurm  ablation_shuffle.slurm  large_model_train.slurm  model_train.slurm  model_train_large.slurm  run_hparam.slurm  small_model_train.slurm  training_curves.slurm  training_curves10.slurm  training_curves100pct.slurm  training_curves10pct.slurm  training_curves20.slurm  training_curves30.slurm  training_curves3pct.slurm  training_curves40.slurm  training_curves50.slurm  training_curves50pct.slurm
